--- a/cover_generator.csproj
+++ b/cover_generator.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="VersOne.Epub" Version="3.2.0" />
+  </ItemGroup>
+
 </Project>
