--- a/cover_generator.csproj
+++ b/cover_generator.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="QuestPDF" Version="2023.4.2" />
+    <PackageReference Include="PdfPig" Version="0.1.7" />
     <PackageReference Include="VersOne.Epub" Version="3.2.0" />
   </ItemGroup>
 
